# dive-into-deep-learnning

./: .gitignore  Cargo.toml  makefile  readme.md  requirements.txt
bitnet/: bitnet158.py  fineturn.py  mnist.py
chapter-1-candle/: Cargo.toml
chapter-1-candle/src/: calculus.rs  data_op.rs  lib.rs  linear_algebra.rs
chapter-2-hub/: Cargo.toml
chapter-2-hub/src/: lib.rs
chapter-3-linear-regression/: Cargo.toml
chapter-3-linear-regression/src/: lib.rs
src/: main.rs
test_trainer/runs/Mar20_07-11-08_GoooPc/: events.out.tfevents.1710889868.GoooPc.44772.0
test_trainer/runs/Mar20_07-20-35_GoooPc/: events.out.tfevents.1710890437.GoooPc.4436.0
test_trainer/runs/Mar20_07-24-39_GoooPc/: events.out.tfevents.1710890679.GoooPc.16740.0
test_trainer/runs/Mar20_07-35-08_GoooPc/: events.out.tfevents.1710891308.GoooPc.46436.0
test_trainer/runs/Mar20_07-37-07_GoooPc/: events.out.tfevents.1710891427.GoooPc.41556.0
test_trainer/runs/Mar20_07-40-54_GoooPc/: events.out.tfevents.1710891654.GoooPc.46260.0
